[package]
name = "web-scaffolding"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-client-ip = "1.3.1"
eyre = "0.6"
pico-args = "0.5.0"
rust-embed = { version = "8.11.0", features = ["axum", "mime-guess"] }
scc = { version = "3.6.12", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shrinkwraprs = { version = "0.3.0", optional = true }
simple-eyre = "0.3.1"
time = "0.3"
toasty = { version = "0.3.0", features = [
    "sqlite",
    "serde",
], optional = true, git = "https://github.com/tokio-rs/toasty.git" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["tokio"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing = "0.1"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = [
    "fast-rng",
    "v7",
    "serde",
], optional = true }

[features]
compression = ["tower-http/compression-full"]
database = ["dep:toasty"]
store = ["dep:scc", "dep:uuid", "dep:shrinkwraprs"]
