[package]
name = "web-scaffolding"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-client-ip = "1.3.1"
bon = { version = "3.9.1" }
derive-where = { version = "1.6.1" }
eyre = "0.6"
pico-args = "0.5.0"
rust-embed = { version = "8.11.0", features = ["axum", "mime-guess"] }
scc = { version = "3.6.12", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shrinkwraprs = { version = "0.3.0", optional = true }
simple-eyre = "0.3.1"
stable_deref_trait = { version = "1.2.1", optional = true }
time = "0.3"
toasty = { version = "0.3.0", features = [
    "sqlite",
    "serde",
], optional = true, git = "https://github.com/tokio-rs/toasty.git" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["tokio"] }
tower-cookies = { version = "0.11.0", optional = true, features = ["signed"] }
tower-http = { version = "0.6", features = ["catch-panic", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = [
    "fast-rng",
    "v7",
    "serde",
], optional = true }
yoke = { version = "0.8.2", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }

[features]
compression = ["tower-http/compression-full"]
database = ["dep:toasty"]
store = ["dep:scc", "dep:uuid", "dep:shrinkwraprs"]
cookies = ["dep:tower-cookies", "dep:yoke", "dep:stable_deref_trait"]
session = ["store", "cookies"]

db-sqlite = ["toasty?/sqlite"]
db-postgresql = ["toasty?/postgresql"]
db-mysql = ["toasty?/mysql"]
db-dynamodb = ["toasty?/dynamodb"]
